--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -5,17 +5,19 @@
         <img src="<%=listing.image%>" class="card-img-top" alt="...">
         <div class="card-body">
           <p class="card-text"><b><%=listing.title%></b></p>
-          
+          <i>owned by &nbsp<%=listing.owner.username %></i>
         <li><%=listing.description%></li>
         <li><%=listing.price.toLocaleString("en-IN")%></li>
         <li><%=listing.location%></li>
         <li><%=listing.country%></li>
         </div>
       </div>
+      <% if(currUser&&currUser._id.equals(listing.owner._id)){%>
     <div class="btns"><a href="/listings/<%=listing._id%>/edit"><button>edit this listing</button></a>
         <br><br>
         <form method="POST" action="/listings/<%=listing._id%>?_method=DELETE">
         <button>delete this listing</button></form></div>
+        <%}%>
         <div class="col-8 offset-3">
           <hr>
           <h4>leave a review</h4>
@@ -26,8 +28,22 @@
             </div>
             <div>
               <label for="rating" class="form-label">Rating</label>
-              <input type="range" min="1" max="5" id="rating" name="review[rating]">
+              <fieldset class="starability-slot" name="review[rating]">
+                <legend>rating:</legend>
+                <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="0" checked aria-label="No rating." />
+                <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+                <label for="first-rate1" title="Terrible">1 star</label>
+                <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+                <label for="first-rate2" title="Not good">2 stars</label>
+                <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+                <label for="first-rate3" title="Average">3 stars</label>
+                <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+                <label for="first-rate4" title="Very good">4 stars</label>
+                <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+                <label for="first-rate5" title="Amazing">5 stars</label>
+              </fieldset>
             </div>
+           
             <div>
               <label for="comments" class="form-label">Comments</label>
               <textarea name="review[comment] "id="comments" cols="30" rows="10" class="form-control" required></textarea>
@@ -40,7 +56,12 @@
                   <h5 class="card-title"><%= review.sender %></h5>
                   <li class="card-text"><%=review.comment%></li>
                   <li class="card-text"><%=review.rating%> stars</li>
+                  <p>rating:</p>
+  <p class="starability-result" data-rating="<%=review.rating%>">
+    
+  </p>
                 </div>
+                
                 <form method="POST" action="/listings/<%=listing._id%>/reviews/<%=review._id%>?_method=DELETE">
                   <button class="btn btn-sm btn-dark">Delete</button>
                 </form>
