--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -2,7 +2,7 @@
 <body>
     <h3>Listing deatils</h3>
     <div class="card offset-3" style="width: 18rem">
-        <img src="<%=listing.image%>" class="card-img-top" alt="...">
+        <img src="<%=listing.image.url%>" class="card-img-top" alt="...">
         <div class="card-body">
           <p class="card-text"><b><%=listing.title%></b></p>
           <i>owned by &nbsp<%=listing.owner.username %></i>
